sql injection detect and  uppercased fields

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "database UI"
   ],
   "scripts": {
-    "watch": "tsc -w -p tsconfig.server.json",
+    "watch": "tsc -w --typeRoots ./types -p tsconfig.server.json",
     "build-client-dev": "npx vite --config vite.config.js",
     "build-client-prod": "npx vite build --config vite.config-prod.js",
     "test": "jest --detectOpenHandles --verbose=true",
@@ -31,7 +31,6 @@
     "jquery": "^3.7.1",
     "moment": "^2.29.1",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.3",
     "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
     "pg": "^8.16.3",
@@ -52,9 +51,13 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@stylistic/eslint-plugin-ts": "^4.4.1",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^9.34.0",
     "rollup": "^2.60.0",
     "selenium-webdriver": "^4.0.0-beta.4",
     "typescript": "^5.9.2",
